--- a/textbooks.html
+++ b/textbooks.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
     <link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'/>
-    <link rel="icon" type="image/x-icon" href="download.jpeg" />
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,6 +20,7 @@
         border: 2px solid red;
         margin-left: 10px;
         text-align: center;
+        transition: 0.4s;
       }
       .dropbtn:hover {
         border: 2px solid blue;
@@ -74,10 +75,7 @@
         border: 2px solid blue;
       }
       .sidetext {
-        margin-left: 267px;
-      }
-      .sidetext1 {
-        margin-left: 267px;
+        margin-left: 360px;
       }
     </style>
   </head>
@@ -114,8 +112,8 @@
 	  <h1 id="centre">Textbook section</h1>
 	  <br>
 	
-    <div id="centre" class="dropdown">
-      <button class="dropbtn sidetext">English Books</button>
+    <div id="centre" class="dropdown sidetext">
+      <button class="dropbtn">English Books</button>
       <div class="dropdown-content sidetext1">
         <a
           href="honeydew-8th-class-download-complete-book-d194e96c.zip"
