--- a/geo.html
+++ b/geo.html
@@ -96,6 +96,14 @@
   <a id="centre" href="g1.pdf"><button class="gn">chapter 1</button></a>
   <br>
   <a id="centre" href="g2.pdf"><button class="gn">chapter 2</button></a>
-  </body>
+  <br>
+  <a id="centre" href="g3.pdf"><button class="gn">chapter 3</button></a>
+  <br>
+  <a id="centre" href="g4.pdf"><button class="gn">chapter 4</button></a>
+  <br>
+  <a id="centre" href="g5.pdf"><button class="gn">chapter 5</button></a>
+  <br>
+  <a id="centre" href="g6.pdf"><button class="gn">chapter 6</button></a>
+  
   <script src="scripts.js"></script>
 </html>
