--- a/history.html
+++ b/history.html
@@ -47,7 +47,7 @@
         color: blue;
         cursor: pointer;
       }
-      .gn{
+      .hn{
         cursor: pointer;
         width: 136px;
         height: 34px;
@@ -57,7 +57,7 @@
         margin-bottom: 20px;
         margin-top: 40px;
       }
-      .gn:hover{
+      .hn:hover{
         border: 2px solid blue;
         font-size: 18px;
       }
@@ -93,9 +93,25 @@
       </p>
     </nav>
   <h1 id="centre"> history notes </h1>
-  <a id="centre" href="h1.pdf"><button class="gn">chapter 1</button></a>
+  <a id="centre" href="h1.pdf"><button class="hn">chapter 1</button></a>
   <br>
-  <a id="centre" href="h2.pdf"><button class="gn">chapter 2</button></a>
+  <a id="centre" href="h2.pdf"><button class="hn">chapter 2</button></a>
+  <br>
+  <a id="centre" href="h3.pdf"><button class="hn">chapter 3</button></a>
+  <br>
+  <a id="centre" href="h4.pdf"><button class="hn">chapter 4</button></a>
+  <br>
+  <a id="centre" href="h5.pdf"><button class="hn">chapter 5</button></a>
+  <br>
+  <a id="centre" href="h6.pdf"><button class="hn">chapter 6</button></a>
+  <br>
+  <a id="centre" href="h7.pdf"><button class="hn">chapter 7</button></a>
+  <br>
+  <a id="centre" href="h8.pdf"><button class="hn">chapter 8</button></a>
+   <br>
+  <a id="centre" href="h9.pdf"><button class="hn">chapter 9</button></a>
+   <br>
+  <a id="centre" href="h10.pdf"><button class="hn">chapter 10</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
