--- a/civics.html
+++ b/civics.html
@@ -96,6 +96,22 @@
   <a id="centre" href="c1.pdf"><button class="gn">chapter 1</button></a>
   <br>
    <a id="centre" href="c2.pdf"><button class="gn">chapter 2</button></a>
+  <br>
+   <a id="centre" href="c3.pdf"><button class="gn">chapter 3</button></a>
+  <br>
+   <a id="centre" href="c4.pdf"><button class="gn">chapter 4</button></a>
+  <br>
+   <a id="centre" href="c5.pdf"><button class="gn">chapter 5</button></a>
+  <br>
+   <a id="centre" href="c6.pdf"><button class="gn">chapter 6</button></a>
+  <br>
+   <a id="centre" href="c7.pdf"><button class="gn">chapter 7</button></a>
+  <br>
+   <a id="centre" href="c8.pdf"><button class="gn">chapter 8</button></a>
+  <br>
+   <a id="centre" href="c9.pdf"><button class="gn">chapter 9</button></a>
+  <br>
+   <a id="centre" href="c10.pdf"><button class="gn">chapter 10</button></a>
   </body>
   <script src="scripts.js"></script>
 </html>
