--- a/maths_notes.html
+++ b/maths_notes.html
@@ -76,6 +76,7 @@ border: 2px solid red;
         backface-visibility: hidden;
         border-radius: 10px;
         border: 2px solid red;
+        margin-left: 247%;
       }
       .middle {
         transition: .5s ease;
@@ -87,6 +88,7 @@ border: 2px solid red;
         -ms-transform: translate(-50%, -50%);
         text-align: center;
         position: absolute;
+        margin-left: 247%;
       }
       .container:hover .image {
         opacity: 0.3;
