--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
     </style>
   </head>
+  
   <body>
     <nav class="navbar">
       <p>
@@ -118,6 +119,7 @@
         /></span>
       </p>
     </nav>
+  <h5 class="time" id="current-time"></h5>
     <h1 id="centre" class="body">Welcome to class VIII-C educational website</h1>
     <p id="centre" class="desc">
       Press subject notes to get notes for every chapter, of every subject
@@ -125,5 +127,18 @@
     <p class="end">Owned by and mady by 8-c-computer guys.</p>
     <a class="contact" href="mailto:8.c.webpage@gmail.com">contact us</a>
   </body>
+  <script>
+
+    let time = document.getElementById('current-time')
+
+    setInterval(() =>{
+
+      let d = new Date();
+
+      time.innerHTML = d.toLocaleTimeString();
+
+    },10)
+
+  </script>
   <script src="scripts.js"></script>
 </html>
