--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1 id="centre" color=#000000>About us</h1>
     <p id="centre" class="contributors">
       co-founder and developer: Nitin Kamal.P.K
