--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -73,6 +73,7 @@
         <a href="studentslist.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1>Birthday list</h1>
     <table class="centre">
       <tr>
