--- a/civics.html
+++ b/civics.html
@@ -92,6 +92,7 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
   <h1 id="centre"> civics notes </h1>
   <a id="centre" href="c1.pdf"><button class="gn">chapter 1</button></a>
   <br>
