--- a/contact_us.html
+++ b/contact_us.html
@@ -80,6 +80,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <a href="mailto:vishnuvikram828@gmail.com"
       ><button class="emailvishnu" type="button">Vishnu Vikram</button></a
     ><br />
