--- a/english_notes.html
+++ b/english_notes.html
@@ -92,6 +92,7 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">Welcome to english notes area! choose any notes to view it</h1>
     <p id="centre">It so happened-lesson-1<br>
     </br>How the Camel got his hump</p>
