--- a/history.html
+++ b/history.html
@@ -92,6 +92,7 @@
         <a class="navbaritem" href="subjects.html">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
   <h1 id="centre"> history notes </h1>
   <a id="centre" href="h1.pdf"><button class="hn">chapter 1</button></a>
   <br>
