--- a/maths_notes.html
+++ b/maths_notes.html
@@ -135,6 +135,7 @@ border: 2px solid red;
       <a href="subjects.html" class="navbaritem">Back</a>
     </p>
   </nav>
+  <h5 class="time" id="current-time"></h5>
   <h1> this is where you download maths notes</h1>
   <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
