--- a/science_notes.html
+++ b/science_notes.html
@@ -101,6 +101,7 @@
         <a href="subjects.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">
       Welcome to science notes area! Here, you can get all the answers for every
       chapter of the allern active QR book. Just choose any chapter
