--- a/studentslist.html
+++ b/studentslist.html
@@ -58,6 +58,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">students list</h1>
     <table class="centre">
       <tr>
