--- a/subjects.html
+++ b/subjects.html
@@ -149,6 +149,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">
       Welcome to the subjects area! click on any subject to view notes for that
       subject
