--- a/textbooks.html
+++ b/textbooks.html
@@ -108,6 +108,7 @@
         <a href="index.html" class="navbaritem">Back</a>
       </p>
     </nav>
+    <h5 class="time" id="current-time"></h5>
 	  <br>
 	  <h1 id="centre">Textbook section</h1>
 	  <br>
