--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
           >
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
           <br>
           <a href="subjects.html">Subject notes</a>
           <br>
@@ -68,7 +68,7 @@
           <br>
           <a href="contact_us.html">Contact Us </a>
           <br>
-          <a href="about.html">About us</a>
+          <a class="active" href="about.html">About us</a>
           <br>
           <a href="https://lachat.clobas.com" target="_blank">
             our school website
@@ -78,9 +78,9 @@
           ><img class="menuopener" src="menu-outline.svg"
         /></span>
         <a href="index.html" class="navbaritem">Back</a>
+        <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-    <h5 class="time" id="current-time"></h5>
     <h1 id="centre" color=#000000>About us</h1>
     <p id="centre" class="contributors">
       co-founder and developer: Nitin Kamal.P.K
