--- a/english_notes.html
+++ b/english_notes.html
@@ -90,20 +90,20 @@
           ><img class="menuopener" src="menu-outline.svg"
         /></span>
         <a class="navbaritem" href="subjects.html">Back</a>
+        <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">Welcome to english notes area! choose any notes to view it</h1>
-    <p id="centre">It so happened-lesson-1<br>
-    </br>How the Camel got his hump</p>
-    <p id="centre">
-        <a class="engn" href="It_so_happened_lesson_1.pdf" target="_blank"><button class="engn"> Chapter 1 supplementary book</button></a>
-    </p>
- <p id="centre">Honeydew-lesson-2-poem<br>
-    </br>Geography Lesson</p>
-    <p id="centre">
-        <a class="engn" href="Ch-2-poem-geography-lesson" target="_blank"><button class="engn"> Chapter 2 poem </button></a>
-    </p>
+    <p>It so happened<br>
+    </br>chapter 1: How the camel got this Hump</p>
+    <div class="container">
+      <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
+      <div class="middle">
+        <div class="text">
+          <a class="subn" href="It_so_happened_lesson_1.pdf" target="_blank" download="it_so_happened_lesson1"><button class="mybutton">download</button></a>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="scripts.js"></script>
 </html>
