--- a/studentslist.html
+++ b/studentslist.html
@@ -25,6 +25,11 @@
       color: blue;
       cursor: pointer;
     }
+    .time {
+        display: inline-block;
+        margin-left: 80%;
+        color: orangered;
+      }
   </style>
   <body>
     <nav class="navbar">
@@ -56,9 +61,9 @@
         /></span>
         <a class="navbaritem" href="birthdaylist.html">birthday list</a>
         <a href="index.html" class="navbaritem">Back</a>
+        <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-    <h5 class="time" id="current-time"></h5>
     <h1 id="centre">students list</h1>
     <table class="centre">
       <tr>
