--- a/maths_notes.html
+++ b/maths_notes.html
@@ -133,9 +133,9 @@ border: 2px solid red;
         ><img class="menuopener" src="menu-outline.svg"
       /></span>
       <a href="subjects.html" class="navbaritem">Back</a>
+      <h5 class="time" id="current-time"></h5>
     </p>
   </nav>
-  <h5 class="time" id="current-time"></h5>
   <h1> this is where you download maths notes</h1>
   <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
@@ -148,7 +148,7 @@ border: 2px solid red;
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="Rational numbers" target="_blank"><button class="mybutton"> Chapter 1 download </button></a>
+          <a class="subn" href="Rational numbers" target="_blank"><button class="mybutton"> Chapter 1 download </button></a>
         </div>
       </div>
     </div>
@@ -158,7 +158,7 @@ border: 2px solid red;
       <img class="image" src="Screenshot_2022-08-20-11-30-58-068.jpeg" alt="Avatar">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mybutton"> Chapter 2 download </button></a>
+          <a class="subn" href="ncert-solutions-for-class-8-maths-chapter-2.pdf" target="_blank"><button class="mybutton"> Chapter 2 download </button></a>
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@ border: 2px solid red;
       <img src="Screenshot_2022-08-20-20-08-24-026.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mybutton"> Chapter 3 download </button></a>
+          <a class="subn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-3.pdf" target="_blank"><button class="mybutton"> Chapter 3 download </button></a>
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@ border: 2px solid red;
       <img src="Screenshot_2022-08-20-20-09-07-317.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mybutton"> Chapter 4 download </button></a>
+          <a class="subn" href="ncert-solutions-for-class-8-maths-chapter-4.pdf" target="_blank"><button class="mybutton"> Chapter 4 download </button></a>
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@ border: 2px solid red;
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mybutton"> Chapter 5 download </button></a>
+          <a class="subn" href="ncert-solutions-dec2020-for-class-8-maths-chapter-5.pdf" target="_blank"><button class="mybutton"> Chapter 5 download </button></a>
         </div>
       </div>
     </div>
@@ -198,7 +198,7 @@ border: 2px solid red;
       <img src="Screenshot_2022-08-21-18-51-02-212.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mybutton"> Chapter 6 download </button></a>
+          <a class="subn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mybutton"> Chapter 6 download </button></a>
         </div>
       </div>
     <p>chapter 7 <br>
@@ -208,7 +208,7 @@ border: 2px solid red;
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
         <div class="text">
-          <a class="mathsn" href="ncert-class-8-solution-dec30-for-maths-chapter-7.pdf" target="_blank"><button class="mybutton"> Chapter 7 download </button></a>
+          <a class="subn" href="ncert-class-8-solution-dec30-for-maths-chapter-7.pdf" target="_blank"><button class="mybutton"> Chapter 7 download </button></a>
         </div>
       </div>
     </div>
