--- a/maths_notes.html
+++ b/maths_notes.html
@@ -212,6 +212,8 @@ border: 2px solid red;
         </div>
       </div>
     </div>
+  <a class="mathsn1" href="ncert-solutions-jan27-for-cbse-class-8-chapter-8-comparing-quantities.pdf" target="_blank"><button class="mathsn"> Chapter 8 download </button></a>
+        </div>
     </p>
     <script src="scripts.js"></script>
 </body>
