--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
         color: blue;
         cursor: pointer;
       }
+      .time {
+        margin-left: 85%;
+      }
     </style>
     <nav class="navbar">
       <p>
