--- a/contact_us.html
+++ b/contact_us.html
@@ -49,6 +49,9 @@
         font-size: 16px;
         border: 2px solid blue;
       }
+      .time {
+        margin-left: 85%;
+      }
     </style>
   </head>
   <body>
