--- a/maths_notes.html
+++ b/maths_notes.html
@@ -201,9 +201,9 @@ border: 2px solid red;
           <a class="subn" href="ncert-solutions-for-class-8-maths-chapter-6.pdf" target="_blank"><button class="mybutton"> Chapter 6 download </button></a>
         </div>
       </div>
-    <p>chapter 7 <br>
-    </br>cube and cube roots</p>
     </div>
+    <p class="ch7">chapter 7 <br>
+    </br>cube and cube roots</p>
     <div class="container">
       <img src="Screenshot_2022-08-21-18-44-37-689.jpeg" alt="Avatar" class="image">
       <div class="middle">
@@ -212,8 +212,6 @@ border: 2px solid red;
         </div>
       </div>
     </div>
-  <a class="mathsn1" href="ncert-solutions-jan27-for-cbse-class-8-chapter-8-comparing-quantities.pdf" target="_blank"><button class="mathsn"> Chapter 8 download </button></a>
-        </div>
     </p>
     <script src="scripts.js"></script>
 </body>
