--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-    <h1 id="centre" class="body">Welcome to class VIII-C educational website</h1>
+    <h1 id="centre" class="body">Welcome to class VIII-C educational app. <a href="https://class-8.github.io/8-c-edu">Our website</a></h1>
     <p id="centre" class="desc">
-      Press subject notes to get notes for every chapter, of every subject
+      Click the hamburger menu in the top left corner to access notes, textbooks and more...
     </p>
   </body>
   <script src="scripts.js"></script>
