--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-    <h1 id="centre" class="body">Welcome to class VIII-C educational app.</h1>
+    <h1 id="centre" class="body">Welcome to class VIII-C educational website.</h1>
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
     </p>
