--- a/index.html
+++ b/index.html
@@ -18,89 +18,26 @@
   font-size: 20px;
   margin-bottom: 90px;
 }
-      
-      .sidenav {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-      }
-
-      .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-      }
-
-      .sidenav a:hover {
-        color: #f1f1f1;
-      }
-
-      .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-      }
-
-      #main {
-        transition: margin-left 0.5s;
-        padding: 16px;
-      }
-
-      @media screen and (max-height: 450px) {
-        .sidenav {
-          padding-top: 15px;
-        }
-        .sidenav a {
-          font-size: 18px;
-        }
-      }
-      .menuopener {
-        width: 35px;
-        height: 32px;
-        background-color: white;
-        border-radius: 4px;
-        transition: 0.4s;
-      }
-      .menuopener:hover {
-        background-color: #818181;
-      }
-    </style>
+  </style>
   </head>
   <body>
     <nav class="navbar">
       <p>
-        <div id="mySidenav" class="sidenav">
-          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-            >&times;</a
-          >
-          <a class="active" href="index.html">Home</a>
-          <br>
-          <a href="subjects.html">Subject notes</a>
-          <br>
-          <a href="textbooks.html">Textbook</a>
-          <br>
-          <a href="studentslist.html">Student list</a>
-          <br>
-          <a href="contact_us.html">Contact Us </a>
-          <br>
-          <a href="about.html">About us</a>
-          <br>
-          <a href="https://lachat.clobas.com" target="_blank">
-            our school website
-          </a>
-        </div>
+        <div class="sidenav">
+  <a href="index.html">Home</a>
+  <a href="subjects.html">Subject notes</a>
+  <a href="studentslist.html">Students list</a>
+   <button class="dropdown-btn">Dropdown
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-container">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+  <a href="#contact">Contact</a>
+  <a href="#contact">Search</a>
+</div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
           ><img class="menuopener" src="menu-outline.svg"
         /></span>
