--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   font-size: 20px;
   margin-bottom: 90px;
 }
+      marquee {
+  color: white;
+}
+
       
       .sidenav {
         height: 100%;
