--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       marquee {
   color: white;
 }
+       .download {
+        cursor: pointer;
+        width: 136px;
+        height: 34px;
+        border-radius: 10px;
+        transition: 0.3s;
+        border-style: hidden;
+        text-align: center;
+      }
 
       
       .sidenav {
@@ -115,6 +124,11 @@
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
     </p>
+  <p> if you want to download the app for this website download here</p>
+  <a href="https://github.com/class-8/8-c-edu/releases/download/v1.0.6/8-c-edu-win32-1.0.6.zip"><button id="centre" class="download">download 32-bit</button></a>
+  <br>
+   <a href="https://github.com/class-8/8-c-edu/releases/download/v1.0.6/8-c-edu-win64-1.0.6.zip"><button id="centre" class="download">download 64-bit</button></a>
+  
   </body>
   <script src="scripts.js"></script>
 </html>
