Roaming text update

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-  <marquee behavior="alternate"> HAPPY NAVARATRI HOLIDAY </marquee>
+  <marquee behavior="alternate" scrollamount="15"> HAPPY NAVARATRI HOLIDAY </marquee>
     <h1 id="centre" class="body">Welcome to class VIII-C educational website.</h1>
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
