--- a/textbooks.html
+++ b/textbooks.html
@@ -131,7 +131,7 @@
     <div id="centre" class="dropdown">
       <button class="dropbtn">Social Science</button>
       <div class="dropdown-content">
-        <a href="history.zip" download>history</a>
+        <a href="tinywow_history-ch-1_5965428.pdf" download>history</a>
         <a href="civics.zip" download>civics</a>
         <a href="hess4dd.zip" download>Geography </a>
       </div>
