--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         transition: 0.3s;
         border-style: hidden;
         text-align: center;
+        background-color: black;
       }
 
       
