--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 }
 
        .download {
+        color: #ffffff;
         cursor: pointer;
         width: 136px;
         height: 34px;
@@ -27,7 +28,7 @@
         transition: 0.3s;
         border-style: hidden;
         text-align: center;
-        background-color: black;
+        background-color: #343434;
       }
 
       
