--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.jpeg"
+          ><img class="menuopener" src="img_4664.png"
         /></span>
         <h5 class="time" id="current-time"></h5>
       </p>
