bug fixes and birthday wish marquee in homepage.

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a href="index.html" class="navbaritem">Back</a>
         <h5 class="time" id="current-time"></h5>
