--- a/studentslist.html
+++ b/studentslist.html
@@ -55,7 +55,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a class="navbaritem" href="birthdaylist.html">birthday list</a>
         <a href="index.html" class="navbaritem">Back</a>
@@ -129,6 +129,7 @@
         <td>156177</td>
       </tr>
     </table>
+    <h4>*Girls list not shown because they didn't want their name to be listed</h4>  
   </body>
   <script src="scripts.js"></script>
 </html>
