--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -68,7 +68,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a href="studentslist.html" class="navbaritem">Back</a>
         <h5 class="time" id="current-time"></h5>
