--- a/contact_us.html
+++ b/contact_us.html
@@ -78,7 +78,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a href="index.html" class="navbaritem">Back</a>
         <h5 class="time" id="current-time"></h5>
