--- a/english_notes.html
+++ b/english_notes.html
@@ -87,7 +87,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a class="navbaritem" href="subjects.html">Back</a>
         <h5 class="time" id="current-time"></h5>
