--- a/science_notes.html
+++ b/science_notes.html
@@ -96,7 +96,7 @@
           </a>
         </div>
         <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-          ><img class="menuopener" src="menu-outline.svg"
+          ><img class="menuopener" src="menu-outline.jpg"
         /></span>
         <a href="subjects.html" class="navbaritem">Back</a>
         <h5 class="time" id="current-time"></h5>
