--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         transition: 0.4s;
       }
       .menuopener:hover {
-        background-color: #818181;
+        
+        background-image: url(https://cdn2.iconfinder.com/data/icons/mobile-and-web/100/menu2-512.png)
       }
     </style>
   </head>
