--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         transition: 0.4s;
       }
       .menuopener:hover {
-        
-        background-image: url(https://cdn2.iconfinder.com/data/icons/mobile-and-web/100/menu2-512.png)
+      
+        background-image: url(https://cdn2.iconfinder.com/data/icons/mobile-and-web/100/menu2-512.png);
       }
     </style>
   </head>
