--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
         border-radius: 4px;
         transition: 0.4s;
       }
-      .menuopener:hover {
-        image: url(https://cdn2.iconfinder.com/data/icons/mobile-and-web/100/menu2-512.png);
-      }
     </style>
   </head>
   <body>
@@ -124,7 +121,7 @@
       </p>
     </nav>
   <marquee behavior="alternate" scrollamount="10"> HAPPY NAVARATRI HOLIDAY </marquee>
-  <marquee behavior="alternate" scrollamount="10"><p id="wish"></p></marquee>
+  <marquee behavior="alternate" scrollamount="10" direction="right"><p id="wish"></p></marquee>
     <h1 id="centre" class="body">Welcome to class VIII-C educational website.</h1>
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
