--- a/maths_notes.html
+++ b/maths_notes.html
@@ -136,7 +136,7 @@ border: 2px solid red;
       <h5 class="time" id="current-time"></h5>
     </p>
   </nav>
-  <h1> this is where you download maths notes</h1>
+  <h1> This is where you download maths notes</h1>
   <p>made by byjus the learning app</p>
   <p class="description"> click on the pictures and press the download button</p>
     
