--- a/science_notes.html
+++ b/science_notes.html
@@ -79,9 +79,9 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
           >
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
           <br>
-          <a href="subjects.html">Subject notes</a>
+          <a class="active" href="subjects.html">Subject notes</a>
           <br>
           <a href="textbooks.html">Textbook</a>
           <br>
