major bug fixes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </p>
     </nav>
   <marquee behavior="alternate" scrollamount="10"> HAPPY NAVARATRI HOLIDAY </marquee>
-  <marquee behavior="alternate" scrollamount="10" direction="right"><p id="wish"></p></marquee>
+  <marquee id="wish" scrollamount="10" direction="right"></marquee>
     <h1 id="centre" class="body">Welcome to class VIII-C educational website.</h1>
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
