--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -448,7 +448,7 @@
         a.innerHTML = remainingdaysofm + 30 + 14;
         b.innerHTML = 10 - x;
         c.innerHTML = remainingdaysofm + 30 + 13;
-        d.innerHTML = "This student's birthday is over";
+        d.innerHTML = 1 - x;
         e.innerHTML = "This student's birthday is over";
         f.innerHTML = "This student's birthday is over";
         g.innerHTML = 10 - x;
@@ -501,93 +501,93 @@
         p.innerHTML = "this student's birthday is over";
         q.innerHTML = 2 - x;
       }
-      if (a.innerHTML == -1) {
-        a.innerHTML = "today is adharsh's birthday, dont forgot to wish him!";
-      } else if (a.innerHTML == 0) {
+      if (a.innerHTML == 0) {
+        a.innerHTML = "Today is adharsh's birthday, dont forgot to wish him!";
+      } else if (a.innerHTML == 1) {
         a.innerHTML = "Tomorrow";
       }
-      if (b.innerHTML == -1) {
-        b.innerHTML = "today is balaji's birthday, dont forgot to wish him!";
-      } else if (b.innerHTML == 0) {
+      if (b.innerHTML == 0) {
+        b.innerHTML = "Today is balaji's birthday, dont forgot to wish him!";
+      } else if (b.innerHTML == 1) {
         b.innerHTML - "Tomorrow";
       }
-      if (c.innerHTML == -1) {
-        c.innerHTML = "today is dhikshan's birthday, dont forgot to wish him!";
-      } else if (c.innerHTML == 0) {
+      if (c.innerHTML == 0) {
+        c.innerHTML = "Today is dhikshan's birthday, dont forgot to wish him!";
+      } else if (c.innerHTML == 1) {
         c.innerHTML = "Tomorrow";
       }
-      if (d.innerHTML == -1) {
-        d.innerHTML = "today is gokul's birthday, dont forgot to wish him!";
-      } else if (d.innerHTML == 0) {
+      if (d.innerHTML == 0) {
+        d.innerHTML = "Today is gokul's birthday, dont forgot to wish him!";
+      } else if (d.innerHTML == 1) {
         d.innerHTML = "Tomorrow";
       }
-      if (e.innerHTML == -1) {
-        e.innerHTML = "today is harsha's birthday, dont forgot to wish him!";
-      } else if (e.innerHTML == 0) {
+      if (e.innerHTML == 0) {
+        e.innerHTML = "Today is harsha's birthday, dont forgot to wish him!";
+      } else if (e.innerHTML == 1) {
         e.innerHTML = "Tomorrow";
       }
-      if (f.innerHTML == -1) {
-        f.innerHTML = "today is joshuva's birthday, dont forgot to wish him!";
-      } else if (f.innerHTML == 0) {
+      if (f.innerHTML == 0) {
+        f.innerHTML = "Today is joshuva's birthday, dont forgot to wish him!";
+      } else if (f.innerHTML == 1) {
         f.innerHTML = "Tomorrow";
       }
-      if (g.innerHTML == -1) {
+      if (g.innerHTML == 0) {
         g.innerHTML =
-          "today is keerthivasan's birthday, dont forgot to wish him!";
-      } else if (g.innerHTML == 0) {
+          "Today is keerthivasan's birthday, dont forgot to wish him!";
+      } else if (g.innerHTML == 1) {
         g.innerHTML = "Tomorrow";
       }
-      if (h.innerHTML == -1) {
-        h.innerHTML = "today is mithran's birthday, dont forgot to wish him!";
-      } else if (h.innerHTML == 0) {
+      if (h.innerHTML == 0) {
+        h.innerHTML = "Today is mithran's birthday, dont forgot to wish him!";
+      } else if (h.innerHTML == 1) {
         h.innerHTML = "Tomorrow";
       }
-      if (i.innerHTML == -1) {
-        i.innerHTML = "today is nitin's birthday, dont forgot to wish him!";
-      } else if (i.innerHTML == 0) {
+      if (i.innerHTML == 0) {
+        i.innerHTML = "Today is nitin's birthday, dont forgot to wish him!";
+      } else if (i.innerHTML == 1) {
         i.innerHTML = "Tomorrow";
       }
-      if (j.innerHTML == -1) {
-        j.innerHTML = "today is praveen's birthday, dont forgot to wish him!";
-      } else if (j.innerHTML == 0) {
+      if (j.innerHTML == 0) {
+        j.innerHTML = "Today is praveen's birthday, dont forgot to wish him!";
+      } else if (j.innerHTML == 1) {
         j.innerHTML = "Tomorrow";
       }
-      if (k.innerHTML == -1) {
-        k.innerHTML = "today is sanjay's birthday, dont forgot to wish him!";
-      } else if (k.innerHTML == 0) {
+      if (k.innerHTML == 0) {
+        k.innerHTML = "Today is sanjay's birthday, dont forgot to wish him!";
+      } else if (k.innerHTML == 1) {
         k.innerHTML = "Tomorrow";
       }
-      if (l.innerHTML == -1) {
-        l.innerHTML = "today is shaswad's birthday, dont forgot to wish him!";
-      } else if (l.innerHTML == 0) {
+      if (l.innerHTML == 0) {
+        l.innerHTML = "Today is shaswad's birthday, dont forgot to wish him!";
+      } else if (l.innerHTML == 1) {
         l.innerHTML = "Tomorrow";
       }
-      if (m.innerHTML == -1) {
+      if (m.innerHTML == 0) {
         m.innerHTML =
-          "today is seshavardhan's birthday, dont forgot to wish him!";
-      } else if (m.innerHTML == 0) {
+          "Today is seshavardhan's birthday, dont forgot to wish him!";
+      } else if (m.innerHTML == 1) {
         m.innerHTML = "Tomorrow";
       }
-      if (n.innerHTML == -1) {
+      if (n.innerHTML == 0) {
         n.innerHTML =
-          "today is srivarshan's birthday, dont forgot to wish him!";
-      } else if (n.innerHTML == 0) {
+          "Today is srivarshan's birthday, dont forgot to wish him!";
+      } else if (n.innerHTML == 1) {
         n.innerHTML = "Tomorrow";
       }
-      if (o.innerHTML == -1) {
+      if (o.innerHTML == 0) {
         o.innerHTML =
-          "today is saichiranjeevi's birthday, dont forgot to wish him!";
-      } else if (o.innerHTML == 0) {
+          "Today is saichiranjeevi's birthday, dont forgot to wish him!";
+      } else if (o.innerHTML == 1) {
         o.innerHTML = "Tomorrow";
       }
-      if (p.innerHTML == -1) {
-        p.innerHTML = "today is tinakaran's birthday, dont forgot to wish him!";
-      } else if (p.innerHTML == 0) {
+      if (p.innerHTML == 0) {
+        p.innerHTML = "Today is tinakaran's birthday, dont forgot to wish him!";
+      } else if (p.innerHTML == 1) {
         p.innerHTML = "Tomorrow";
       }
-      if (q.innerHTML == -1) {
-        q.innerHTML = "today is vishnu's birthday, dont forgot to wish him!";
-      } else if (q.innerHTML == 0) {
+      if (q.innerHTML == 0) {
+        q.innerHTML = "Today is vishnu's birthday, dont forgot to wish him!";
+      } else if (q.innerHTML == 1) {
         q.innerHTML = "Tomorrow";
       }
     }, 10);
