--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
         <h5 class="time" id="current-time"></h5>
       </p>
     </nav>
-  <marquee behavior="alternate" scrollamount="10"> HAPPY NAVARATRI HOLIDAY </marquee>
   <marquee id="wish" scrollamount="10" direction="right"></marquee>
     <h1 id="centre" class="body">Welcome to class VIII-C educational website.</h1>
     <p id="centre" class="desc">
       Click the hamburger menu in the top left corner to access notes, textbooks and more...
     </p>
-  <p> if you want to download the app for this website download here</p>
+  <p> If you want to use the windows software, download from the buttons below. If you are on macOS, please download from this link: https://drive.google.com/drive/folders/1xsFIjW7keqqXfcNhGFdbswP5T6KymDK0?usp=sharing. please go to https://github.com/class-8/8c-class/releases/tag/v1.0.9 for instructions.</p>
   <a href="https://github.com/class-8/8-c-edu/releases/download/v1.0.9/8-c-edu-win32-1.0.9.zip"><button id="centre" class="download">download 32-bit</button></a>
   <br>
   <a href="https://github.com/class-8/8-c-edu/releases/download/v1.0.9/8-c-edu-win64-1.0.9.zip"><button id="centre" class="download">download 64-bit</button></a>
